[package]
name = "lumio-config"
description = "Lumio config"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
lumio-crypto = { workspace = true }
lumio-global-constants = { workspace = true }
lumio-logger = { workspace = true }
lumio-secure-storage = { workspace = true }
lumio-short-hex-str = { workspace = true }
lumio-temppath = { workspace = true }
lumio-transaction-filters = { workspace = true }
lumio-types = { workspace = true }
arr_macro = { workspace = true }
bcs = { workspace = true }
byteorder = { workspace = true }
cfg-if = { workspace = true }
get_if_addrs = { workspace = true }
maplit = { workspace = true }
num_cpus = { workspace = true }
poem-openapi = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_merge = { workspace = true }
serde_yaml = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
lumio-crypto = { workspace = true }
lumio-types = { workspace = true, features = ["fuzzing"] }
tempfile = { workspace = true }

[features]
default = []
failpoints = []
fuzzing = ["lumio-crypto/fuzzing", "lumio-types/fuzzing"]
smoke-test = []
testing = []
tokio-console = []

[package.metadata.cargo-machete]
ignored = ["strum"]
