[package]
name = "lumio-consensus"
description = "Lumio consensus"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
lumio-bitvec = { workspace = true }
lumio-bounded-executor = { workspace = true }
lumio-channels = { workspace = true }
lumio-collections = { workspace = true }
lumio-config = { workspace = true }
lumio-consensus-notifications = { workspace = true }
lumio-consensus-types = { workspace = true }
lumio-crypto = { workspace = true }
lumio-crypto-derive = { workspace = true }
lumio-dkg = { workspace = true }
lumio-enum-conversion-derive = { workspace = true }
lumio-event-notifications = { workspace = true }
lumio-executor = { workspace = true }
lumio-executor-types = { workspace = true }
lumio-experimental-runtimes = { workspace = true }
lumio-fallible = { workspace = true }
lumio-infallible = { workspace = true }
lumio-logger = { workspace = true }
lumio-mempool = { workspace = true }
lumio-metrics-core = { workspace = true }
lumio-network = { workspace = true }
lumio-peer-monitoring-service-types = { workspace = true }
lumio-reliable-broadcast = { workspace = true }
lumio-runtimes = { workspace = true }
lumio-safety-rules = { workspace = true }
lumio-schemadb = { workspace = true }
lumio-secure-storage = { workspace = true }
lumio-short-hex-str = { workspace = true }
lumio-storage-interface = { workspace = true }
lumio-temppath = { workspace = true }
lumio-time-service = { workspace = true }
lumio-transaction-filters = { workspace = true }
lumio-types = { workspace = true }
lumio-validator-transaction-pool = { workspace = true }
lumio-vm = { workspace = true }
lumio-vm-validator = { workspace = true }
async-trait = { workspace = true }
bcs = { workspace = true }
byteorder = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
claims = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }
enum_dispatch = { workspace = true }
fail = { workspace = true }
futures = { workspace = true }
futures-channel = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
lru = { workspace = true }
maplit = { workspace = true }
mini-moka = { workspace = true }
mirai-annotations = { workspace = true }
move-core-types = { workspace = true }
move-vm-runtime = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
once_cell = { workspace = true }
ordered-float = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
scopeguard = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-retry = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
lumio-cached-packages = { workspace = true }
lumio-config = { workspace = true, features = ["fuzzing"] }
lumio-consensus-types = { workspace = true, features = ["fuzzing"] }
lumio-executor-test-helpers = { workspace = true }
lumio-keygen = { workspace = true }
lumio-mempool = { workspace = true, features = ["fuzzing"] }
lumio-netcore = { workspace = true }
lumio-network = { workspace = true, features = ["fuzzing"] }
lumio-safety-rules = { workspace = true, features = ["testing"] }
lumio-transaction-filters = { workspace = true, features = ["fuzzing"] }
lumio-types = { workspace = true, features = ["testing"] }
lumio-vm = { workspace = true, features = ["fuzzing"] }
claims = { workspace = true }
mockall = { workspace = true }
move-core-types = { workspace = true }
proptest = { workspace = true }
proptest-derive = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
fuzzing = [
    "lumio-consensus-types/fuzzing",
    "lumio-config/fuzzing",
    "lumio-crypto/fuzzing",
    "lumio-mempool/fuzzing",
    "lumio-types/fuzzing",
    "lumio-safety-rules/testing",
]
failpoints = ["fail/failpoints"]

[package.metadata.cargo-machete]
ignored = ["serde_bytes"]

[lints.clippy]
unwrap_used = "deny"
