[package]
name = "lumio-mempool"
description = "Lumio mempool for consuming incoming transactions"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
lumio-bounded-executor = { workspace = true }
lumio-channels = { workspace = true }
lumio-config = { workspace = true }
lumio-consensus-types = { workspace = true }
lumio-crypto = { workspace = true }
lumio-event-notifications = { workspace = true }
lumio-infallible = { workspace = true }
lumio-logger = { workspace = true }
lumio-mempool-notifications = { workspace = true }
lumio-metrics-core = { workspace = true }
lumio-netcore = { workspace = true }
lumio-network = { workspace = true }
lumio-peer-monitoring-service-types = { workspace = true }
lumio-runtimes = { workspace = true }
lumio-short-hex-str = { workspace = true }
lumio-storage-interface = { workspace = true }
lumio-time-service = { workspace = true }
lumio-transaction-filters = { workspace = true }
lumio-types = { workspace = true }
lumio-vm-validator = { workspace = true }
bcs = { workspace = true }
fail = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
maplit = { workspace = true }
num_cpus = { workspace = true }
once_cell = { workspace = true }
proptest = { workspace = true, optional = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
lumio-compression = { workspace = true }
lumio-config = { workspace = true }
lumio-id-generator = { workspace = true }
lumio-network = { workspace = true, features = ["fuzzing"] }
lumio-storage-interface = { workspace = true, features = ["fuzzing"] }
lumio-time-service = { workspace = true, features = ["testing"] }
lumio-transaction-filters = { workspace = true, features = ["fuzzing"] }
enum_dispatch = { workspace = true }
proptest = { workspace = true }

[features]
default = []
failpoints = ["fail/failpoints", "lumio-vm-validator/failpoints"]
fuzzing = ["proptest", "lumio-types/fuzzing", "lumio-storage-interface/fuzzing", "lumio-config/fuzzing"]
consensus-only-perf-test = []
