[package]
name = "lumio-vm-validator"
description = "Lumio vm validator"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
lumio-logger = { workspace = true }
lumio-storage-interface = { workspace = true }
lumio-types = { workspace = true }
lumio-vm = { workspace = true }
lumio-vm-environment = { workspace = true }
lumio-vm-logging = { workspace = true }
fail = { workspace = true }
move-binary-format = { workspace = true }
move-core-types = { workspace = true }
move-vm-runtime = { workspace = true }
move-vm-types = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
lumio-cached-packages = { workspace = true }
lumio-crypto = { workspace = true }
lumio-db = { workspace = true }
lumio-executor-test-helpers = { workspace = true }
lumio-gas-schedule = { workspace = true, features = ["testing"] } 
lumio-temppath = { workspace = true }
lumio-types = { workspace = true, features = ["testing"] }
lumio-vm-genesis = { workspace = true }
move-vm-types = { workspace = true, features = ["testing"] }
rand = { workspace = true }

[features]
default = []
failpoints = ["fail/failpoints"]
fuzzing = ["lumio-types/fuzzing", "lumio-crypto/fuzzing", "lumio-db/fuzzing"]
