[package]
name = "lumio-openapi-spec-generator"
description = "Lumio API OpenAPI Spec Generator"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
lumio-api = { workspace = true }
lumio-config = { workspace = true }
lumio-mempool = { workspace = true, features = ["fuzzing"] }
lumio-storage-interface = { workspace = true }
lumio-types = { workspace = true }
clap = { workspace = true }
