[package]
name = "lumio-api-test-context"
description = "Lumio API test context"
version = "0.2.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
lumio-api = { workspace = true }
lumio-api-types = { workspace = true }
lumio-cached-packages = { workspace = true }
lumio-config = { workspace = true }
lumio-crypto = { workspace = true }
lumio-db = { workspace = true, features = ["fuzzing"] }
lumio-executor = { workspace = true }
lumio-executor-types = { workspace = true }
lumio-framework = { workspace = true }
lumio-genesis = { workspace = true }
lumio-indexer-grpc-table-info = { workspace = true }
lumio-mempool = { workspace = true, features = ["fuzzing"] }
lumio-mempool-notifications = { workspace = true }
lumio-sdk = { workspace = true }
lumio-storage-interface = { workspace = true }
lumio-temppath = { workspace = true }
lumio-types = { workspace = true }
lumio-vm = { workspace = true }
lumio-vm-logging = { workspace = true }
lumio-vm-validator = { workspace = true }
bcs = { workspace = true }
bytes = { workspace = true }
goldenfile = { workspace = true }
hyper = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
warp = { workspace = true }
warp-reverse-proxy = { workspace = true }
