[package]
name = "lumio-consensus-types"
description = "Lumio consensus types"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
lumio-bitvec = { workspace = true }
lumio-crypto = { workspace = true }
lumio-crypto-derive = { workspace = true }
lumio-executor-types = { workspace = true }
lumio-infallible = { workspace = true }
lumio-logger = { workspace = true }
lumio-short-hex-str = { workspace = true }
lumio-types = { workspace = true }
bcs = { workspace = true }
derivative = { workspace = true }
fail = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
mini-moka = { workspace = true }
mirai-annotations = { workspace = true }
once_cell = { workspace = true }
proptest = { workspace = true, optional = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
lumio-types = { workspace = true, features = ["fuzzing"] }
proptest = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
failpoints = ["fail/failpoints"]
fuzzing = ["proptest", "lumio-types/fuzzing", "lumio-crypto/fuzzing"]
