[package]
name = "lumio-safety-rules"
description = "Lumio safety rules"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
lumio-config = { workspace = true }
lumio-consensus-types = { workspace = true }
lumio-crypto = { workspace = true }
lumio-global-constants = { workspace = true }
lumio-infallible = { workspace = true }
lumio-logger = { workspace = true }
lumio-metrics-core = { workspace = true }
lumio-secure-net = { workspace = true }
lumio-secure-storage = { workspace = true }
lumio-types = { workspace = true }
lumio-vault-client = { workspace = true }
hex = { workspace = true }
once_cell = { workspace = true }
proptest = { workspace = true, optional = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
lumio-config = { workspace = true, features = ["fuzzing"] }
lumio-consensus-types = { workspace = true, features = ["fuzzing"] }
lumio-proptest-helpers = { workspace = true }
lumio-secure-storage = { workspace = true, features = ["testing"] }
claims = { workspace = true }
criterion = { workspace = true }
proptest = { workspace = true }
rusty-fork = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "safety_rules"
harness = false
required-features = ["testing"]

[features]
default = []
fuzzing = ["lumio-consensus-types/fuzzing", "lumio-config/fuzzing", "proptest"]
testing = ["lumio-secure-storage/testing"]
