[package]
name = "lumio-indexer"
description = "Lumio Indexer"
version = "0.0.1"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
lumio-api = { workspace = true }
lumio-api-types = { workspace = true }
lumio-bitvec = { workspace = true }
lumio-config = { workspace = true }
lumio-logger = { workspace = true }
lumio-mempool = { workspace = true }
lumio-metrics-core = { workspace = true }
lumio-runtimes = { workspace = true }
lumio-storage-interface = { workspace = true }
lumio-types = { workspace = true }
async-trait = { workspace = true }
bcs = { workspace = true }
bigdecimal = { workspace = true }
chrono = { workspace = true }
diesel = { workspace = true, features = [
    "chrono",
    "postgres",
    "r2d2",
    "numeric",
    "serde_json",
] }
diesel_migrations = { workspace = true }
field_count = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
lumio-api-test-context = { workspace = true }
