[package]
name = "lumio-admin-service"
description = "The Admin Service"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
lumio-config = { workspace = true }
lumio-consensus = { workspace = true }
lumio-crypto = { workspace = true }
lumio-infallible = { workspace = true }
lumio-logger = { workspace = true }
lumio-mempool = { workspace = true }
lumio-runtimes = { workspace = true }
lumio-storage-interface = { workspace = true }
lumio-system-utils = { workspace = true }
lumio-types = { workspace = true }
bcs = { workspace = true }
futures-channel = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
sha256 = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[target.'cfg(unix)'.dependencies]
jemalloc-ctl = { workspace = true }
jemalloc-sys = { workspace = true }
