[package]
name = "lumio-api-tester"
description = "Lumio developer API tester"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
lumio-api-types = { workspace = true }
lumio-cached-packages = { workspace = true }
lumio-framework = { workspace = true }
lumio-logger = { workspace = true }
lumio-push-metrics = { workspace = true }
lumio-rest-client = { workspace = true }
lumio-sdk = { workspace = true }
lumio-types = { workspace = true }
futures = { workspace = true }
move-core-types = { workspace = true }
once_cell = { workspace = true }
prometheus = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
