[package]
name = "lumio-compression"
description = "A unified compression interface and implementation offered by Lumio"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
lumio-logger = { workspace = true }
lumio-metrics-core = { workspace = true }
lz4 = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
lumio-crypto = { workspace = true }
lumio-types = { workspace = true }
bcs = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
