[package]
name = "lumio-jwk-consensus"
description = "Lumio JWK consensus"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
lumio-bitvec = { workspace = true }
lumio-bounded-executor = { workspace = true }
lumio-channels = { workspace = true }
lumio-config = { workspace = true }
lumio-consensus-types = { workspace = true }
lumio-crypto = { workspace = true }
lumio-enum-conversion-derive = { workspace = true }
lumio-event-notifications = { workspace = true }
lumio-infallible = { workspace = true }
lumio-jwk-utils = { workspace = true }
lumio-logger = { workspace = true }
lumio-metrics-core = { workspace = true }
lumio-network = { workspace = true }
lumio-reliable-broadcast = { workspace = true }
lumio-runtimes = { workspace = true }
lumio-safety-rules = { workspace = true }
lumio-time-service = { workspace = true }
lumio-types = { workspace = true }
lumio-validator-transaction-pool = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
futures-channel = { workspace = true }
futures-util = { workspace = true }
move-core-types = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-retry = { workspace = true }

[dev-dependencies]
lumio-types = { workspace = true, features = ["fuzzing"] }
lumio-validator-transaction-pool = { workspace = true, features = ["fuzzing"] }
[features]
smoke-test = []
