[package]
name = "lumio-network-checker"
description = "Lumio network checker"
version = "0.0.1"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
lumio-config = { workspace = true }
lumio-crypto = { workspace = true }
lumio-logger = { workspace = true }
lumio-network = { workspace = true }
lumio-types = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }

