[package]
name = "lumio-rest-client"
description = "Lumio REST client"
version = "0.0.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[features]
default = ["dpn"]
dpn = []

[dependencies]
anyhow = { workspace = true }
lumio-api-types = { workspace = true }
lumio-crypto = { workspace = true }
lumio-infallible = { workspace = true }
lumio-logger = { workspace = true }
lumio-types = { workspace = true }
bcs = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }
move-core-types = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[dev-dependencies]
clap = { workspace = true }
