[package]
name = "lumio-rosetta"
description = "Lumio Rosetta"
version = "0.0.1"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
lumio-cached-packages = { workspace = true }
lumio-config = { workspace = true }
lumio-crypto = { workspace = true }
lumio-global-constants = { workspace = true }
lumio-logger = { workspace = true }
lumio-node = { workspace = true }
lumio-rest-client = { workspace = true }
lumio-runtimes = { workspace = true }
lumio-sdk = { workspace = true }
lumio-types = { workspace = true }
lumio-warp-webserver = { workspace = true }
bcs = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
move-core-types = { workspace = true }
once_cell = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
warp = { workspace = true }
