[package]
name = "lumio-transaction-filters"
description = "The transaction filters used by various Lumio components."
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
lumio-crypto = { workspace = true }
lumio-types = { workspace = true }
move-core-types = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
lumio-crypto = { workspace = true, features = ["fuzzing", "testing"] }

[features]
fuzzing = []
