[package]
name = "lumio"
description = "Lumio tool for management of nodes and interacting with the blockchain"
version = "7.8.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
lumio-api-types = { workspace = true }
lumio-backup-cli = { workspace = true }
lumio-bitvec = { workspace = true }
lumio-build-info = { workspace = true }
lumio-cached-packages = { workspace = true }
lumio-cli-common = { workspace = true }
lumio-config = { workspace = true }
lumio-crypto = { workspace = true }
lumio-faucet-core = { workspace = true }
lumio-framework = { workspace = true }
lumio-gas-profiling = { workspace = true }
lumio-gas-schedule = { workspace = true }
lumio-genesis = { workspace = true }
lumio-github-client = { workspace = true }
lumio-global-constants = { workspace = true }
lumio-indexer-grpc-server-framework = { workspace = true }
lumio-indexer-processor-sdk = { workspace = true }
lumio-keygen = { workspace = true }
lumio-ledger = { workspace = true }
lumio-localnet = { workspace = true }
lumio-logger = { workspace = true }
lumio-move-debugger = { workspace = true }
lumio-network-checker = { workspace = true }
lumio-node = { workspace = true }
lumio-rest-client = { workspace = true }
lumio-sdk = { workspace = true }
lumio-storage-interface = { workspace = true }
lumio-telemetry = { workspace = true }
lumio-temppath = { workspace = true }
lumio-transaction-simulation = { workspace = true }
lumio-transaction-simulation-session = { workspace = true }
lumio-types = { workspace = true }
lumio-vm = { workspace = true, features = ["testing"] }
lumio-vm-environment = { workspace = true }
lumio-vm-genesis = { workspace = true }
lumio-vm-logging = { workspace = true }
lumio-vm-types = { workspace = true }
lumio-workspace-server = { workspace = true }
async-trait = { workspace = true }
backoff = { workspace = true }
base64 = { workspace = true }
bcs = { workspace = true }
bollard = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["env", "unstable-styles", "wrap_help"] }
clap_complete = { workspace = true }
colored = { workspace = true }
dashmap = { workspace = true }
diesel = { workspace = true, features = ["postgres_backend"] }
diesel-async = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
indoc = { workspace = true }
itertools = { workspace = true }
legacy-move-compiler = { workspace = true }
maplit = { workspace = true }
move-asm = { workspace = true }
move-binary-format = { workspace = true }
move-bytecode-source-map = { workspace = true }
move-cli = { workspace = true }
move-command-line-common = { workspace = true }
move-compiler-v2 = { workspace = true }
move-core-types = { workspace = true }
move-coverage = { workspace = true }
move-decompiler = { workspace = true }
move-disassembler = { workspace = true }
move-ir-types = { workspace = true }
move-linter = { workspace = true }
move-model = { workspace = true }
move-package = { workspace = true }
move-prover-boogie-backend = { workspace = true }
move-symbol-pool = { workspace = true }
move-unit-test = { workspace = true, features = ["debugging"] }
move-vm-runtime = { workspace = true, features = ["testing"] }
open = { workspace = true }
pathsearch = { workspace = true }
poem = { workspace = true }
processor = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
self_update = { git = "https://github.com/banool/self_update.git", rev = "8306158ad0fd5b9d4766a3c6bf967e7ef0ea5c4b", features = [
    "archive-zip",
    "compression-zip-deflate",
] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
set_env = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

[target.'cfg(unix)'.dependencies]
jemallocator = { workspace = true }

[features]
default = []
fuzzing = []
no-upload-proposal = []
indexer = ["lumio-node/indexer"]
cli-framework-test-move = []

[build-dependencies]
shadow-rs = { workspace = true }
