[package]
name = "lumio-reliable-broadcast"
description = "Lumio Reliable Broadcast Implementation"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
lumio-bounded-executor = { workspace = true }
lumio-consensus-types = { workspace = true }
lumio-enum-conversion-derive = { workspace = true }
lumio-infallible = { workspace = true }
lumio-logger = { workspace = true }
lumio-time-service = { workspace = true }
lumio-types = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
claims = { workspace = true }
futures = { workspace = true }
futures-channel = { workspace = true }
tokio = { workspace = true }
tokio-retry = { workspace = true }

[dev-dependencies]
lumio-consensus-types = { workspace = true, features = ["fuzzing"] }
lumio-time-service = { workspace = true, features = ["testing"] }

[features]
default = []
