[package]
name = "lumio-transaction-emitter-lib"
description = "Library for Lumio transaction emitter"
version = "0.0.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
again = { workspace = true }
anyhow = { workspace = true }
lumio-config = { workspace = true }
lumio-crypto = { workspace = true }
lumio-global-constants = { workspace = true }
lumio-infallible = { workspace = true }
lumio-logger = { workspace = true }
lumio-rest-client = { workspace = true }
lumio-sdk = { workspace = true }
lumio-transaction-generator-lib = { workspace = true }
lumio-types = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
